# web_nosql

./: .gitignore  pyproject.toml
ht_8_1/: authors.json  config.ini  connection_.py  models_.py  quotes.json  search_redis.py  search_redis_cache.py  seed_db_from_files.py  validation.py
ht_8_1/ht_8_2/: config_add.ini  conn_.py  consumer_email_.py  consumer_sms_.py  model_.py  producer_.py  seed_contacts.py
