[tool.poetry]
name = "nosql-db"
version = "0.1.0"
description = ""
authors = ["AntonHran <anton.hranovskyi@gmail.com>"]
readme = "README.md"
packages = [{include = "nosql_db"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.4.1"
mongoengine = "^0.27.0"
pika = "^1.3.2"
redis = "^4.6.0"
redis-lru = "^0.1.2"
celery = "^5.3.1"
faker = "^19.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
